<resources>
    <string name="app_name">Weather</string>
    <string name="manage_city">Manage City</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="functionality_limited">Functionality limited</string>
    <string name="description_permission_denied">Since location access has not been granted. Please go to Settings -> Applications -> Permissions and grant location access to this app.</string>
    <string name="new_city">New City</string>
    <string name="my_location">My Location</string>
    <string name="city_not_found">City not found</string>
    <string name="location_not_found">Location not found</string>
    <string name="cancel">Cancel</string>
    <string name="celsius">Celsius</string>
    <string name="celsius_type">℃</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="fahrenheit_type">℉</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="humidity">Humidity</string>
    <string name="metric">metric</string>
    <string name="imperial">imperial</string>
    <string name="day">Day</string>
    <string name="search">Search</string>
    <string name="temp">Temp</string>
    <string name="switch_temp">Switch Temp</string>
    <string name="whole_day_forecast">Whole-Day Forecast</string>
    <string name="forecast">Forecast</string>
    <string name="please_try_again">Please try again</string>
    <string name="http_url_connection_failed">Http url connection failed</string>
    <string name="ok">OK</string>
    <string name="warning">Warning</string>
    <string name="recommend_5_days_ahead">Recommended 5 days ahead</string>
    <string name="recommend_cloud">Dress Appropriately</string>
    <string name="recommend_cloud_description">Less direct sunlight and potentially cooler temperatures. Consider wearing layers to adjust to any temperature changes throughout the day</string>
    <string name="recommend_thunderstorm">Stay Indoors</string>
    <string name="recommend_thunderstorm_description">It is generally advised to stay indoors during a thunderstorm to ensure your safety</string>
    <string name="recommend_rain">Be Cautious on the Roads</string>
    <string name="recommend_rain_description">Rainy weather can create slippery road conditions, so exercise caution while driving</string>
    <string name="recommend_drizzle">Safety and Slippery Surfaces</string>
    <string name="recommend_drizzle_description">Be cautious of slippery surfaces caused by the drizzle. Wet sidewalks, stairs, or roads can become slippery</string>
    <string name="recommend_snow">Drive Safely</string>
    <string name="recommend_snow_description">If you need to drive in snowy conditions, take extra precautions. Clear the snow off your vehicle, drive slowly, leave plenty of space between your car and the one in front</string>
    <string name="recommend_clear">Sun Protection</string>
    <string name="recommend_clear_description">Enjoy the sunshine, but make sure to protect yourself from harmful UV rays. Wear sunscreen with a high SPF</string>
    <string name="recommend_foggy">Visibility and Safety</string>
    <string name="recommend_foggy_description">Foggy conditions can reduce visibility, so it\'s important to take extra precautions when driving or moving outdoors</string>
</resources>